--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask==3.0.1
-Flask-SQLAlchemy==3.1.1
-Flask-Login==0.6.3
-Flask-WTF==1.2.1
-Flask-Migrate==4.0.5
-email-validator==2.1.0.post1
-python-dotenv==1.0.1
-Werkzeug==3.0.1
-WTForms==3.1.2
+Flask
+Flask-SQLAlchemy
+Flask-Login
+Flask-WTF
+Flask-Migrate
+email-validator
+python-dotenv
+Werkzeug
+WTForms
