--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,8 +49,16 @@ jobs:
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
           cd /home/milav/docker-projects/vardhan-flask
-          docker-compose pull
-          docker-compose up -d --build
+          docker compose pull
+          docker compose down
+          docker compose up -d
+          # Wait for database to be ready
+          sleep 30
+          # Run database migrations and initialization
+          docker compose exec -T vardhan_app flask db upgrade || docker compose exec -T vardhan_app flask db stamp head
+          docker compose exec -T vardhan_app flask db migrate
+          docker compose exec -T vardhan_app flask db upgrade
+          docker compose exec -T vardhan_app python init_database.py
