--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -55,10 +55,10 @@ jobs:
           docker compose pull
           docker compose down
           docker compose up -d
-          # Wait for database to be ready
-          sleep 30
-          # Run database migrations and initialization
-          docker compose exec -T vardhan_app flask db upgrade || docker compose exec -T vardhan_app flask db stamp head
-          docker compose exec -T vardhan_app flask db migrate
+          # Wait for app to start
+          sleep 10
+          # Initialize database if needed
+          docker compose exec -T vardhan_app flask db upgrade || docker compose exec -T vardhan_app flask db init
+          docker compose exec -T vardhan_app flask db migrate -m "initial migration"
           docker compose exec -T vardhan_app flask db upgrade
           docker compose exec -T vardhan_app python init_database.py
