--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,6 +28,12 @@ jobs:
       run: |
         pytest
     
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    
     - name: Login to Docker Hub
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       uses: docker/login-action@v1
@@ -40,6 +46,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: .
+        platforms: linux/amd64,linux/arm64
         push: true
         tags: ${{ secrets.DOCKER_HUB_USERNAME }}/vardhan-flask:latest
     
