--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,6 +3,8 @@ name: CI/CD Pipeline
 on:
   push:
     branches: [ master ]
+    tags:
+      - 'v*'
   pull_request:
     branches: [ master ]
 
@@ -17,16 +19,27 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.12'
+        cache: 'pip'
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest
-    
+        pip install pytest safety bandit
+
+    - name: Security check - Safety
+      run: safety check
+      
+    - name: Security check - Bandit
+      run: bandit -r app/
+
     - name: Run tests
       run: |
         pytest
+        
+    - name: Set version tag
+      if: startsWith(github.ref, 'refs/tags/v')
+      run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
 
   deploy:
     needs: test
@@ -59,3 +72,12 @@ jobs:
         
         # Run deploy script
         ssh $SSH_USER@planetmilav.com "cd $DEPLOY_PATH && chmod +x deploy.sh && ./deploy.sh"
+
+    - name: Create Release
+      if: startsWith(github.ref, 'refs/tags/v')
+      uses: softprops/action-gh-release@v1
+      with:
+        name: Release ${{ env.VERSION }}
+        draft: false
+        prerelease: false
+        generate_release_notes: true
